tests/NormalTests/paczka1/fuzzy1/31986493.err
Error in line 4: A445 S229 34,4
Error in line 10: A445 A328 64,5
Error in line 17: A445 A445 73,4
Error in line 21: 9trRGDxaX S203 7,5
Error in line 19: A445 S229 56,2
Error in line 13: I1TuFlT A445 7,7
Error in line 27: A445 S203 9,9
Error in line 28: I1TuFlT S203 97,5
